finished home page. Added alt tags. Fixed Color contrast issues with about anchor tags

--- a/styles/index.css
+++ b/styles/index.css
@@ -67,3 +67,9 @@ html {
 .disabled {color: black;}
 
 .custom-card-col {margin-bottom: 10px; }
+
+.last-card {margin-bottom: 20px;}
+
+#skills {margin-bottom: 20px;}
+
+#about a {color: #006FE6;}
